# DirectLiveCaptions

./: README.md
src/: CMakeLists.txt  LoopbackCapture.h  appx.cpp  appx.hpp  controls.cpp  controls.h  main.cpp  pch.h  window.cpp  window.h
